gl: fix the translate value in copy_boxes.

Fixes 36 test cases (such as push-group-color)

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48221